syntaxique.output
Grammar

    0 $accept: S $end

    1 S: IDF '{' VAR '{' declaration '}' CODE '{' instruction '}' '}'

    2 declaration: INTEGERdecPartie1 declaration
    3            | INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | FLOATdecPartie1 declaration
    5            | FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | STRusePartie2 declaration
    7            | CONST IDF AFF ENTIER ';' declaration
    8            | CONST IDF AFF ENTIER_SGN ';' declaration
    9            | CONST IDF AFF REEL ';' declaration
   10            | CONST IDF AFF REEL_SGN ';' declaration
   11            | STRdec ';' declaration
   12            | %empty

   13 INTEGERdecPartie1: INTEGER listIDF

   14 FLOATdecPartie1: FLOAT listIDF

   15 STRusePartie2: STRuse listIDF

   16 STRdec: STRUCT '{' CHAMPS '}' IDF

   17 CHAMPS: CHAMP ';' CHAMPS
   18       | %empty

   19 listIDF: IDF ';'
   20        | IDF ',' listIDF

   21 CHAMP: INTEGER IDF
   22      | FLOAT IDF

   23 STRuse: STRUCT IDF

   24 NUMBER: ENTIER
   25       | REEL
   26       | ENTIER_SGN
   27       | REEL_SGN

   28 instruction: INSTaff ';' instruction
   29            | INSTaff2 ';' instruction
   30            | INSTaff3 ';' instruction
   31            | INSTaff4 ';' instruction
   32            | IFpartie3 '}' instruction
   33            | FORpartie4 '}' instruction
   34            | WHILEpartie2 '}' instruction
   35            | %empty

   36 INSTaff: IDF AFF exp

   37 INSTaff2: IDF '.' IDF AFF exp

   38 INSTaff3: IDF '[' ENTIER ']' AFF exp

   39 INSTaff4: IDF '[' IDF ']' AFF exp

   40 IFpartie3: IFpartie2 '}' ELSE '{' instruction

   41 IFpartie2: IFpartie1 ')' '{' instruction

   42 IFpartie1: IF '(' condition

   43 FORpartie4: FORpartie3 ')' '{' instruction

   44 FORpartie3: FORpartie2 ':' ENTIER ':' condition

   45 FORpartie2: FORpartie1 ':' ENTIER

   46 FORpartie1: FOR '(' IDF

   47 WHILEpartie2: WHILEpartie1 ')' '{' instruction

   48 WHILEpartie1: WHILE '(' condition

   49 condition: condition OR condition
   50          | condition AND condition
   51          | NOT '(' condition ')'
   52          | exp G exp
   53          | exp GE exp
   54          | exp L exp
   55          | exp LE exp
   56          | exp E exp
   57          | exp NE exp
   58          | NUMBER

   59 exp: exp SUB term
   60    | exp ADD term
   61    | term

   62 term: term MUL factor
   63     | term DIV factor
   64     | factor

   65 factor: IDF
   66       | IDF '[' ENTIER ']'
   67       | IDF '[' IDF ']'
   68       | IDF '.' IDF
   69       | NUMBER
   70       | '(' exp ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 42 46 48 51 70
    ')' (41) 41 43 47 51 70
    ',' (44) 20
    '.' (46) 37 68
    ':' (58) 44 45
    ';' (59) 3 5 7 8 9 10 11 17 19 28 29 30 31
    '[' (91) 3 5 38 39 66 67
    ']' (93) 3 5 38 39 66 67
    '{' (123) 1 16 40 41 43 47
    '}' (125) 1 16 32 33 34 40
    error (256)
    VAR <nom> (258) 1
    CODE <nom> (259) 1
    INTEGER <nom> (260) 3 13 21
    FLOAT <nom> (261) 5 14 22
    STRUCT <nom> (262) 16 23
    IF <nom> (263) 42
    CONST <nom> (264) 7 8 9 10
    ELSE <nom> (265) 40
    FOR <nom> (266) 46
    WHILE <nom> (267) 48
    IDF <nom> (268) 1 3 5 7 8 9 10 16 19 20 21 22 23 36 37 38 39 46 65 66 67 68
    REEL <nom> (269) 9 25
    ENTIER <nom> (270) 3 5 7 24 38 44 45 66
    REEL_SGN <nom> (271) 10 27
    ENTIER_SGN <nom> (272) 8 26
    AFF (273) 7 8 9 10 36 37 38 39
    ADD (274) 60
    SUB (275) 59
    MUL (276) 62
    DIV (277) 63
    OR (278) 49
    AND (279) 50
    NOT (280) 51
    G (281) 52
    GE (282) 53
    L (283) 54
    LE (284) 55
    E (285) 56
    NE (286) 57


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    S (43)
        on left: 1
        on right: 0
    declaration (44)
        on left: 2 3 4 5 6 7 8 9 10 11 12
        on right: 1 2 3 4 5 6 7 8 9 10 11
    INTEGERdecPartie1 (45)
        on left: 13
        on right: 2
    FLOATdecPartie1 (46)
        on left: 14
        on right: 4
    STRusePartie2 (47)
        on left: 15
        on right: 6
    STRdec (48)
        on left: 16
        on right: 11
    CHAMPS (49)
        on left: 17 18
        on right: 16 17
    listIDF <DECT> (50)
        on left: 19 20
        on right: 13 14 15 20
    CHAMP (51)
        on left: 21 22
        on right: 17
    STRuse <structure> (52)
        on left: 23
        on right: 15
    NUMBER <NT> (53)
        on left: 24 25 26 27
        on right: 58 69
    instruction <NT> (54)
        on left: 28 29 30 31 32 33 34 35
        on right: 1 28 29 30 31 32 33 34 40 41 43 47
    INSTaff (55)
        on left: 36
        on right: 28
    INSTaff2 (56)
        on left: 37
        on right: 29
    INSTaff3 (57)
        on left: 38
        on right: 30
    INSTaff4 (58)
        on left: 39
        on right: 31
    IFpartie3 <Cond> (59)
        on left: 40
        on right: 32
    IFpartie2 <Cond> (60)
        on left: 41
        on right: 40
    IFpartie1 <Cond> (61)
        on left: 42
        on right: 41
    FORpartie4 <boucle> (62)
        on left: 43
        on right: 33
    FORpartie3 <boucle> (63)
        on left: 44
        on right: 43
    FORpartie2 <boucle> (64)
        on left: 45
        on right: 44
    FORpartie1 <boucle> (65)
        on left: 46
        on right: 45
    WHILEpartie2 <boucle> (66)
        on left: 47
        on right: 34
    WHILEpartie1 <boucle> (67)
        on left: 48
        on right: 47
    condition <NT> (68)
        on left: 49 50 51 52 53 54 55 56 57 58
        on right: 42 44 48 49 50 51
    exp <NT> (69)
        on left: 59 60 61
        on right: 36 37 38 39 52 53 54 55 56 57 59 60 70
    term <NT> (70)
        on left: 62 63 64
        on right: 59 60 61 62 63
    factor <NT> (71)
        on left: 65 66 67 68 69 70
        on right: 62 63 64


State 0

    0 $accept: . S $end
    1 S: . IDF '{' VAR '{' declaration '}' CODE '{' instruction '}' '}'

    IDF  shift, and go to state 1

    S  go to state 2


State 1

    1 S: IDF . '{' VAR '{' declaration '}' CODE '{' instruction '}' '}'

    '{'  shift, and go to state 3


State 2

    0 $accept: S . $end

    $end  shift, and go to state 4


State 3

    1 S: IDF '{' . VAR '{' declaration '}' CODE '{' instruction '}' '}'

    VAR  shift, and go to state 5


State 4

    0 $accept: S $end .

    $default  accept


State 5

    1 S: IDF '{' VAR . '{' declaration '}' CODE '{' instruction '}' '}'

    '{'  shift, and go to state 6


State 6

    1 S: IDF '{' VAR '{' . declaration '}' CODE '{' instruction '}' '}'
    2 declaration: . INTEGERdecPartie1 declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | . FLOATdecPartie1 declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | . STRusePartie2 declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    9            | . CONST IDF AFF REEL ';' declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   11            | . STRdec ';' declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 11
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 7

    3 declaration: INTEGER . IDF '[' ENTIER ']' ';' declaration
   13 INTEGERdecPartie1: INTEGER . listIDF
   19 listIDF: . IDF ';'
   20        | . IDF ',' listIDF

    IDF  shift, and go to state 17

    listIDF  go to state 18


State 8

    5 declaration: FLOAT . IDF '[' ENTIER ']' ';' declaration
   14 FLOATdecPartie1: FLOAT . listIDF
   19 listIDF: . IDF ';'
   20        | . IDF ',' listIDF

    IDF  shift, and go to state 19

    listIDF  go to state 20


State 9

   16 STRdec: STRUCT . '{' CHAMPS '}' IDF
   23 STRuse: STRUCT . IDF

    IDF  shift, and go to state 21
    '{'  shift, and go to state 22


State 10

    7 declaration: CONST . IDF AFF ENTIER ';' declaration
    8            | CONST . IDF AFF ENTIER_SGN ';' declaration
    9            | CONST . IDF AFF REEL ';' declaration
   10            | CONST . IDF AFF REEL_SGN ';' declaration

    IDF  shift, and go to state 23


State 11

    1 S: IDF '{' VAR '{' declaration . '}' CODE '{' instruction '}' '}'

    '}'  shift, and go to state 24


State 12

    2 declaration: . INTEGERdecPartie1 declaration
    2            | INTEGERdecPartie1 . declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | . FLOATdecPartie1 declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | . STRusePartie2 declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    9            | . CONST IDF AFF REEL ';' declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   11            | . STRdec ';' declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 25
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 13

    2 declaration: . INTEGERdecPartie1 declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | . FLOATdecPartie1 declaration
    4            | FLOATdecPartie1 . declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | . STRusePartie2 declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    9            | . CONST IDF AFF REEL ';' declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   11            | . STRdec ';' declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 26
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 14

    2 declaration: . INTEGERdecPartie1 declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | . FLOATdecPartie1 declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | . STRusePartie2 declaration
    6            | STRusePartie2 . declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    9            | . CONST IDF AFF REEL ';' declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   11            | . STRdec ';' declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 27
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 15

   11 declaration: STRdec . ';' declaration

    ';'  shift, and go to state 28


State 16

   15 STRusePartie2: STRuse . listIDF
   19 listIDF: . IDF ';'
   20        | . IDF ',' listIDF

    IDF  shift, and go to state 29

    listIDF  go to state 30


State 17

    3 declaration: INTEGER IDF . '[' ENTIER ']' ';' declaration
   19 listIDF: IDF . ';'
   20        | IDF . ',' listIDF

    ';'  shift, and go to state 31
    '['  shift, and go to state 32
    ','  shift, and go to state 33


State 18

   13 INTEGERdecPartie1: INTEGER listIDF .

    $default  reduce using rule 13 (INTEGERdecPartie1)


State 19

    5 declaration: FLOAT IDF . '[' ENTIER ']' ';' declaration
   19 listIDF: IDF . ';'
   20        | IDF . ',' listIDF

    ';'  shift, and go to state 31
    '['  shift, and go to state 34
    ','  shift, and go to state 33


State 20

   14 FLOATdecPartie1: FLOAT listIDF .

    $default  reduce using rule 14 (FLOATdecPartie1)


State 21

   23 STRuse: STRUCT IDF .

    $default  reduce using rule 23 (STRuse)


State 22

   16 STRdec: STRUCT '{' . CHAMPS '}' IDF
   17 CHAMPS: . CHAMP ';' CHAMPS
   18       | . %empty
   21 CHAMP: . INTEGER IDF
   22      | . FLOAT IDF

    INTEGER  shift, and go to state 35
    FLOAT    shift, and go to state 36

    $default  reduce using rule 18 (CHAMPS)

    CHAMPS  go to state 37
    CHAMP   go to state 38


State 23

    7 declaration: CONST IDF . AFF ENTIER ';' declaration
    8            | CONST IDF . AFF ENTIER_SGN ';' declaration
    9            | CONST IDF . AFF REEL ';' declaration
   10            | CONST IDF . AFF REEL_SGN ';' declaration

    AFF  shift, and go to state 39


State 24

    1 S: IDF '{' VAR '{' declaration '}' . CODE '{' instruction '}' '}'

    CODE  shift, and go to state 40


State 25

    2 declaration: INTEGERdecPartie1 declaration .

    $default  reduce using rule 2 (declaration)


State 26

    4 declaration: FLOATdecPartie1 declaration .

    $default  reduce using rule 4 (declaration)


State 27

    6 declaration: STRusePartie2 declaration .

    $default  reduce using rule 6 (declaration)


State 28

    2 declaration: . INTEGERdecPartie1 declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | . FLOATdecPartie1 declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | . STRusePartie2 declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    9            | . CONST IDF AFF REEL ';' declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   11            | . STRdec ';' declaration
   11            | STRdec ';' . declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 41
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 29

   19 listIDF: IDF . ';'
   20        | IDF . ',' listIDF

    ';'  shift, and go to state 31
    ','  shift, and go to state 33


State 30

   15 STRusePartie2: STRuse listIDF .

    $default  reduce using rule 15 (STRusePartie2)


State 31

   19 listIDF: IDF ';' .

    $default  reduce using rule 19 (listIDF)


State 32

    3 declaration: INTEGER IDF '[' . ENTIER ']' ';' declaration

    ENTIER  shift, and go to state 42


State 33

   19 listIDF: . IDF ';'
   20        | . IDF ',' listIDF
   20        | IDF ',' . listIDF

    IDF  shift, and go to state 29

    listIDF  go to state 43


State 34

    5 declaration: FLOAT IDF '[' . ENTIER ']' ';' declaration

    ENTIER  shift, and go to state 44


State 35

   21 CHAMP: INTEGER . IDF

    IDF  shift, and go to state 45


State 36

   22 CHAMP: FLOAT . IDF

    IDF  shift, and go to state 46


State 37

   16 STRdec: STRUCT '{' CHAMPS . '}' IDF

    '}'  shift, and go to state 47


State 38

   17 CHAMPS: CHAMP . ';' CHAMPS

    ';'  shift, and go to state 48


State 39

    7 declaration: CONST IDF AFF . ENTIER ';' declaration
    8            | CONST IDF AFF . ENTIER_SGN ';' declaration
    9            | CONST IDF AFF . REEL ';' declaration
   10            | CONST IDF AFF . REEL_SGN ';' declaration

    REEL        shift, and go to state 49
    ENTIER      shift, and go to state 50
    REEL_SGN    shift, and go to state 51
    ENTIER_SGN  shift, and go to state 52


State 40

    1 S: IDF '{' VAR '{' declaration '}' CODE . '{' instruction '}' '}'

    '{'  shift, and go to state 53


State 41

   11 declaration: STRdec ';' declaration .

    $default  reduce using rule 11 (declaration)


State 42

    3 declaration: INTEGER IDF '[' ENTIER . ']' ';' declaration

    ']'  shift, and go to state 54


State 43

   20 listIDF: IDF ',' listIDF .

    $default  reduce using rule 20 (listIDF)


State 44

    5 declaration: FLOAT IDF '[' ENTIER . ']' ';' declaration

    ']'  shift, and go to state 55


State 45

   21 CHAMP: INTEGER IDF .

    $default  reduce using rule 21 (CHAMP)


State 46

   22 CHAMP: FLOAT IDF .

    $default  reduce using rule 22 (CHAMP)


State 47

   16 STRdec: STRUCT '{' CHAMPS '}' . IDF

    IDF  shift, and go to state 56


State 48

   17 CHAMPS: . CHAMP ';' CHAMPS
   17       | CHAMP ';' . CHAMPS
   18       | . %empty
   21 CHAMP: . INTEGER IDF
   22      | . FLOAT IDF

    INTEGER  shift, and go to state 35
    FLOAT    shift, and go to state 36

    $default  reduce using rule 18 (CHAMPS)

    CHAMPS  go to state 57
    CHAMP   go to state 38


State 49

    9 declaration: CONST IDF AFF REEL . ';' declaration

    ';'  shift, and go to state 58


State 50

    7 declaration: CONST IDF AFF ENTIER . ';' declaration

    ';'  shift, and go to state 59


State 51

   10 declaration: CONST IDF AFF REEL_SGN . ';' declaration

    ';'  shift, and go to state 60


State 52

    8 declaration: CONST IDF AFF ENTIER_SGN . ';' declaration

    ';'  shift, and go to state 61


State 53

    1 S: IDF '{' VAR '{' declaration '}' CODE '{' . instruction '}' '}'
   28 instruction: . INSTaff ';' instruction
   29            | . INSTaff2 ';' instruction
   30            | . INSTaff3 ';' instruction
   31            | . INSTaff4 ';' instruction
   32            | . IFpartie3 '}' instruction
   33            | . FORpartie4 '}' instruction
   34            | . WHILEpartie2 '}' instruction
   35            | . %empty
   36 INSTaff: . IDF AFF exp
   37 INSTaff2: . IDF '.' IDF AFF exp
   38 INSTaff3: . IDF '[' ENTIER ']' AFF exp
   39 INSTaff4: . IDF '[' IDF ']' AFF exp
   40 IFpartie3: . IFpartie2 '}' ELSE '{' instruction
   41 IFpartie2: . IFpartie1 ')' '{' instruction
   42 IFpartie1: . IF '(' condition
   43 FORpartie4: . FORpartie3 ')' '{' instruction
   44 FORpartie3: . FORpartie2 ':' ENTIER ':' condition
   45 FORpartie2: . FORpartie1 ':' ENTIER
   46 FORpartie1: . FOR '(' IDF
   47 WHILEpartie2: . WHILEpartie1 ')' '{' instruction
   48 WHILEpartie1: . WHILE '(' condition

    IF     shift, and go to state 62
    FOR    shift, and go to state 63
    WHILE  shift, and go to state 64
    IDF    shift, and go to state 65

    $default  reduce using rule 35 (instruction)

    instruction   go to state 66
    INSTaff       go to state 67
    INSTaff2      go to state 68
    INSTaff3      go to state 69
    INSTaff4      go to state 70
    IFpartie3     go to state 71
    IFpartie2     go to state 72
    IFpartie1     go to state 73
    FORpartie4    go to state 74
    FORpartie3    go to state 75
    FORpartie2    go to state 76
    FORpartie1    go to state 77
    WHILEpartie2  go to state 78
    WHILEpartie1  go to state 79


State 54

    3 declaration: INTEGER IDF '[' ENTIER ']' . ';' declaration

    ';'  shift, and go to state 80


State 55

    5 declaration: FLOAT IDF '[' ENTIER ']' . ';' declaration

    ';'  shift, and go to state 81


State 56

   16 STRdec: STRUCT '{' CHAMPS '}' IDF .

    $default  reduce using rule 16 (STRdec)


State 57

   17 CHAMPS: CHAMP ';' CHAMPS .

    $default  reduce using rule 17 (CHAMPS)


State 58

    2 declaration: . INTEGERdecPartie1 declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | . FLOATdecPartie1 declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | . STRusePartie2 declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    9            | . CONST IDF AFF REEL ';' declaration
    9            | CONST IDF AFF REEL ';' . declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   11            | . STRdec ';' declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 82
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 59

    2 declaration: . INTEGERdecPartie1 declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | . FLOATdecPartie1 declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | . STRusePartie2 declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    7            | CONST IDF AFF ENTIER ';' . declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    9            | . CONST IDF AFF REEL ';' declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   11            | . STRdec ';' declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 83
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 60

    2 declaration: . INTEGERdecPartie1 declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | . FLOATdecPartie1 declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | . STRusePartie2 declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    9            | . CONST IDF AFF REEL ';' declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   10            | CONST IDF AFF REEL_SGN ';' . declaration
   11            | . STRdec ';' declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 84
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 61

    2 declaration: . INTEGERdecPartie1 declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | . FLOATdecPartie1 declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | . STRusePartie2 declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    8            | CONST IDF AFF ENTIER_SGN ';' . declaration
    9            | . CONST IDF AFF REEL ';' declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   11            | . STRdec ';' declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 85
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 62

   42 IFpartie1: IF . '(' condition

    '('  shift, and go to state 86


State 63

   46 FORpartie1: FOR . '(' IDF

    '('  shift, and go to state 87


State 64

   48 WHILEpartie1: WHILE . '(' condition

    '('  shift, and go to state 88


State 65

   36 INSTaff: IDF . AFF exp
   37 INSTaff2: IDF . '.' IDF AFF exp
   38 INSTaff3: IDF . '[' ENTIER ']' AFF exp
   39 INSTaff4: IDF . '[' IDF ']' AFF exp

    AFF  shift, and go to state 89
    '['  shift, and go to state 90
    '.'  shift, and go to state 91


State 66

    1 S: IDF '{' VAR '{' declaration '}' CODE '{' instruction . '}' '}'

    '}'  shift, and go to state 92


State 67

   28 instruction: INSTaff . ';' instruction

    ';'  shift, and go to state 93


State 68

   29 instruction: INSTaff2 . ';' instruction

    ';'  shift, and go to state 94


State 69

   30 instruction: INSTaff3 . ';' instruction

    ';'  shift, and go to state 95


State 70

   31 instruction: INSTaff4 . ';' instruction

    ';'  shift, and go to state 96


State 71

   32 instruction: IFpartie3 . '}' instruction

    '}'  shift, and go to state 97


State 72

   40 IFpartie3: IFpartie2 . '}' ELSE '{' instruction

    '}'  shift, and go to state 98


State 73

   41 IFpartie2: IFpartie1 . ')' '{' instruction

    ')'  shift, and go to state 99


State 74

   33 instruction: FORpartie4 . '}' instruction

    '}'  shift, and go to state 100


State 75

   43 FORpartie4: FORpartie3 . ')' '{' instruction

    ')'  shift, and go to state 101


State 76

   44 FORpartie3: FORpartie2 . ':' ENTIER ':' condition

    ':'  shift, and go to state 102


State 77

   45 FORpartie2: FORpartie1 . ':' ENTIER

    ':'  shift, and go to state 103


State 78

   34 instruction: WHILEpartie2 . '}' instruction

    '}'  shift, and go to state 104


State 79

   47 WHILEpartie2: WHILEpartie1 . ')' '{' instruction

    ')'  shift, and go to state 105


State 80

    2 declaration: . INTEGERdecPartie1 declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    3            | INTEGER IDF '[' ENTIER ']' ';' . declaration
    4            | . FLOATdecPartie1 declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    6            | . STRusePartie2 declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    9            | . CONST IDF AFF REEL ';' declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   11            | . STRdec ';' declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 106
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 81

    2 declaration: . INTEGERdecPartie1 declaration
    3            | . INTEGER IDF '[' ENTIER ']' ';' declaration
    4            | . FLOATdecPartie1 declaration
    5            | . FLOAT IDF '[' ENTIER ']' ';' declaration
    5            | FLOAT IDF '[' ENTIER ']' ';' . declaration
    6            | . STRusePartie2 declaration
    7            | . CONST IDF AFF ENTIER ';' declaration
    8            | . CONST IDF AFF ENTIER_SGN ';' declaration
    9            | . CONST IDF AFF REEL ';' declaration
   10            | . CONST IDF AFF REEL_SGN ';' declaration
   11            | . STRdec ';' declaration
   12            | . %empty
   13 INTEGERdecPartie1: . INTEGER listIDF
   14 FLOATdecPartie1: . FLOAT listIDF
   15 STRusePartie2: . STRuse listIDF
   16 STRdec: . STRUCT '{' CHAMPS '}' IDF
   23 STRuse: . STRUCT IDF

    INTEGER  shift, and go to state 7
    FLOAT    shift, and go to state 8
    STRUCT   shift, and go to state 9
    CONST    shift, and go to state 10

    $default  reduce using rule 12 (declaration)

    declaration        go to state 107
    INTEGERdecPartie1  go to state 12
    FLOATdecPartie1    go to state 13
    STRusePartie2      go to state 14
    STRdec             go to state 15
    STRuse             go to state 16


State 82

    9 declaration: CONST IDF AFF REEL ';' declaration .

    $default  reduce using rule 9 (declaration)


State 83

    7 declaration: CONST IDF AFF ENTIER ';' declaration .

    $default  reduce using rule 7 (declaration)


State 84

   10 declaration: CONST IDF AFF REEL_SGN ';' declaration .

    $default  reduce using rule 10 (declaration)


State 85

    8 declaration: CONST IDF AFF ENTIER_SGN ';' declaration .
